hphp/hack/test/extended_reasons/assign_local.php.exp
error: Typing[4110] Invalid argument [1]
-> Expected Sub [2]
-> But got Super [3]
-> Here's why: this hint [3]
-> flows into this expression [4]
-> which itself flows into this expression [5]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 1st function parameter [6]
-> which itself flows from this declaration [7]
-> which itself flows into this hint, via the (contravariant) 1st function parameter [2]

assign_local.php:10:7
       4 | class Sub extends Super {}
       5 | 
[2,7]  6 | function foo(Sub $_): void {}
       7 | 
[3,4]  8 | function bar_1(Super $f): void {
[5]    9 |   $g = $f;
[1,6] 10 |   foo($g);
      11 | }
      12 | 

error: Typing[4110] Invalid argument [1]
-> Expected Sub [2]
-> But got Super [3]
-> Here's why: this hint [3]
-> flows into this expression [4]
-> which itself flows into this expression [5]
-> which itself flows into this expression [6]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 1st function parameter [7]
-> which itself flows from this declaration [8]
-> which itself flows into this hint, via the (contravariant) 1st function parameter [2]

assign_local.php:16:7
       4 | class Sub extends Super {}
       5 | 
[2,8]  6 | function foo(Sub $_): void {}
       7 | 
       8 | function bar_1(Super $f): void {
         :
      11 | }
      12 | 
[3,4] 13 | function bar_2(Super $f): void {
[5]   14 |   $g = $f;
[6]   15 |   $h = $g;
[1,7] 16 |   foo($h);
      17 | }
      18 | 

error: Typing[4110] Invalid argument [1]
-> Expected Sub [2]
-> But got Super [3]
-> Here's why: this hint [3]
-> flows into this expression [4]
-> which itself flows into this expression [5]
-> which itself flows into this expression [6]
-> which itself flows into this expression [7]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 1st function parameter [8]
-> which itself flows from this declaration [9]
-> which itself flows into this hint, via the (contravariant) 1st function parameter [2]

assign_local.php:23:7
       4 | class Sub extends Super {}
       5 | 
[2,9]  6 | function foo(Sub $_): void {}
       7 | 
       8 | function bar_1(Super $f): void {
         :
      17 | }
      18 | 
[3,4] 19 | function bar_3(Super $f): void {
[5]   20 |   $g = $f;
[6]   21 |   $h = $g;
[7]   22 |   $i = $h;
[1,8] 23 |   foo($i);
      24 | }

3 errors found.
